src/test/ui/generator/yield-while-ref-reborrowed.nll.stderr
error[E0501]: cannot borrow `x` as immutable because previous closure requires unique access
  --> $DIR/yield-while-ref-reborrowed.rs:35:20
   |
LL |     let mut b = || {
   |                 -- generator construction occurs here
LL |         let a = &mut *x;
   |                       - first borrow occurs due to use of `x` in generator
...
LL |     println!("{}", x); //~ ERROR
   |                    ^ second borrow occurs here
LL |     b.resume();
   |     - first borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0501`.
